# Solana_cli-on-web

./: .env.example  .eslintrc.json  .gitignore  README.md  next.config.js  package-lock.json  package.json  reading.md  tailwind.config.js
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/(legal)/privacy/: page.tsx
app/legal/: layout.tsx
app/legal/privacy/: page.tsx
app/legal/terms/: page.tsx
components/docs/: ApiTester.tsx
components/layout/: Footer.tsx  Layout.tsx  Navbar.tsx  header.tsx
components/terminal/: Terminal.tsx
components/tracker/: NetworkTracker.tsx
components/ui/: CTA.tsx  CodespaceSection.tsx  CommandWithCopy.tsx  CopyButton.tsx  Features.tsx  Hero.tsx  HeroSection.tsx  Pattern.tsx  WalletSelector.tsx
context/: WalletContext.tsx
pages/: _app.tsx  _document.tsx  api.tsx  docs.tsx  explorer.tsx  index.tsx  index.tsx.bak  privacy.tsx  privacy.tsx.bak  security.tsx  terminal.tsx  terms.tsx  terms.tsx.bak  tracker.tsx
pages/api/: fetch-balance.ts  generate-keypair.ts  hello.ts  request-airdrop.ts  user.ts
rust/: Cargo.toml  check.rs  keypair_generator.rs
services/: coingeckoService.ts  heliusService.ts  solanaKeypairService.js
styles/: globals.css  grid-effects.css  tw-animate-css.css
types/: bs58.d.ts  phantom.d.ts  wallet.d.ts
