[package]
name = "solana-keypair-generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solana-sdk = "1.14.18"
base64 = "0.13.0"
bs58 = "0.4.0"
rand = "0.8.5"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
